--- a/OpenAlex_Basic_Paging_≤_10k.ipynb
+++ b/OpenAlex_Basic_Paging_≤_10k.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzrxvWfaCdZ6oZbmQcpUAg",
+      "authorship_tag": "ABX9TyP2Ct+wRfwXRyjwq8koaT4R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,21 +23,139 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/xyshuai/openalex-api-examples/blob/main/OpenAlex_Basic_Paging_%E2%89%A4_10k.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xyshuai/openalex-api-demo/blob/main/OpenAlex_Basic_Paging_%E2%89%A4_10k.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "NQLpd5-z8Jrz"
+        "id": "NQLpd5-z8Jrz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66dc07d2-a8ab-4888-9df2-82e7ab5c66bb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "✅ Google Drive mounted. Saving to: /content/drive/MyDrive/OpenAlex\n",
+            "▶️ Requesting page 1 ...\n",
+            "   Page 1: 200 records, total=200\n",
+            "▶️ Requesting page 2 ...\n",
+            "   Page 2: 200 records, total=400\n",
+            "▶️ Requesting page 3 ...\n",
+            "   Page 3: 200 records, total=600\n",
+            "▶️ Requesting page 4 ...\n",
+            "   Page 4: 200 records, total=800\n",
+            "▶️ Requesting page 5 ...\n",
+            "   Page 5: 200 records, total=1000\n",
+            "▶️ Requesting page 6 ...\n",
+            "   Page 6: 200 records, total=1200\n",
+            "▶️ Requesting page 7 ...\n",
+            "   Page 7: 200 records, total=1400\n",
+            "▶️ Requesting page 8 ...\n",
+            "   Page 8: 200 records, total=1600\n",
+            "▶️ Requesting page 9 ...\n",
+            "   Page 9: 200 records, total=1800\n",
+            "▶️ Requesting page 10 ...\n",
+            "   Page 10: 200 records, total=2000\n",
+            "▶️ Requesting page 11 ...\n",
+            "   Page 11: 200 records, total=2200\n",
+            "▶️ Requesting page 12 ...\n",
+            "   Page 12: 200 records, total=2400\n",
+            "▶️ Requesting page 13 ...\n",
+            "   Page 13: 200 records, total=2600\n",
+            "▶️ Requesting page 14 ...\n",
+            "   Page 14: 200 records, total=2800\n",
+            "▶️ Requesting page 15 ...\n",
+            "   Page 15: 200 records, total=3000\n",
+            "▶️ Requesting page 16 ...\n",
+            "   Page 16: 200 records, total=3200\n",
+            "▶️ Requesting page 17 ...\n",
+            "   Page 17: 200 records, total=3400\n",
+            "▶️ Requesting page 18 ...\n",
+            "   Page 18: 200 records, total=3600\n",
+            "▶️ Requesting page 19 ...\n",
+            "   Page 19: 200 records, total=3800\n",
+            "▶️ Requesting page 20 ...\n",
+            "   Page 20: 200 records, total=4000\n",
+            "▶️ Requesting page 21 ...\n",
+            "   Page 21: 200 records, total=4200\n",
+            "▶️ Requesting page 22 ...\n",
+            "   Page 22: 200 records, total=4400\n",
+            "▶️ Requesting page 23 ...\n",
+            "   Page 23: 200 records, total=4600\n",
+            "▶️ Requesting page 24 ...\n",
+            "   Page 24: 200 records, total=4800\n",
+            "▶️ Requesting page 25 ...\n",
+            "   Page 25: 200 records, total=5000\n",
+            "▶️ Requesting page 26 ...\n",
+            "   Page 26: 200 records, total=5200\n",
+            "▶️ Requesting page 27 ...\n",
+            "   Page 27: 200 records, total=5400\n",
+            "▶️ Requesting page 28 ...\n",
+            "   Page 28: 200 records, total=5600\n",
+            "▶️ Requesting page 29 ...\n",
+            "   Page 29: 200 records, total=5800\n",
+            "▶️ Requesting page 30 ...\n",
+            "   Page 30: 200 records, total=6000\n",
+            "▶️ Requesting page 31 ...\n",
+            "   Page 31: 200 records, total=6200\n",
+            "▶️ Requesting page 32 ...\n",
+            "   Page 32: 200 records, total=6400\n",
+            "▶️ Requesting page 33 ...\n",
+            "   Page 33: 200 records, total=6600\n",
+            "▶️ Requesting page 34 ...\n",
+            "   Page 34: 200 records, total=6800\n",
+            "▶️ Requesting page 35 ...\n",
+            "   Page 35: 200 records, total=7000\n",
+            "▶️ Requesting page 36 ...\n",
+            "   Page 36: 200 records, total=7200\n",
+            "▶️ Requesting page 37 ...\n",
+            "   Page 37: 200 records, total=7400\n",
+            "▶️ Requesting page 38 ...\n",
+            "   Page 38: 200 records, total=7600\n",
+            "▶️ Requesting page 39 ...\n",
+            "   Page 39: 200 records, total=7800\n",
+            "▶️ Requesting page 40 ...\n",
+            "   Page 40: 200 records, total=8000\n",
+            "▶️ Requesting page 41 ...\n",
+            "   Page 41: 200 records, total=8200\n",
+            "▶️ Requesting page 42 ...\n",
+            "   Page 42: 200 records, total=8400\n",
+            "▶️ Requesting page 43 ...\n",
+            "   Page 43: 200 records, total=8600\n",
+            "▶️ Requesting page 44 ...\n",
+            "   Page 44: 200 records, total=8800\n",
+            "▶️ Requesting page 45 ...\n",
+            "   Page 45: 200 records, total=9000\n",
+            "▶️ Requesting page 46 ...\n",
+            "   Page 46: 200 records, total=9200\n",
+            "▶️ Requesting page 47 ...\n",
+            "   Page 47: 200 records, total=9400\n",
+            "▶️ Requesting page 48 ...\n",
+            "   Page 48: 200 records, total=9600\n",
+            "▶️ Requesting page 49 ...\n",
+            "   Page 49: 200 records, total=9800\n",
+            "▶️ Requesting page 50 ...\n",
+            "   Page 50: 200 records, total=10000\n",
+            "\n",
+            "📥 Finished downloading. Total records collected: 10000\n",
+            "\n",
+            "✅ Export completed: 10000 records written.\n",
+            "📄 CSV file saved at: /content/drive/MyDrive/OpenAlex/openalex_basic_paging_full.csv\n"
+          ]
+        }
+      ],
       "source": [
         "# === OpenAlex Basic Paging (up to 10,000 records) ===\n",
         "# - Uses classic page-based pagination: page=1,2,...,MAX_PAGES\n",
         "# - Collects results into a single CSV\n",
-        "# - Designed to run in Google Colab, but also works in a normal Python environment with minor adjustment to the file path.\n",
+        "# - Designed to run in Google Colab, but also works in a normal Python environment\n",
         "\n",
         "import os\n",
         "import requests\n",
@@ -68,7 +186,7 @@
         "\n",
         "# Core filtering conditions\n",
         "# - open_access.is_oa:true  → only open-access works\n",
-        "# - authorships.countries:countries/cn → at least one author with country code \"MY\"\n",
+        "# - authorships.countries:countries/my → at least one author with country code \"MY\"\n",
         "# - publication_year:2023-2024 → works published between 2023 and 2024\n",
         "# - type: article or review\n",
         "FILTERS = [\n",
@@ -174,6 +292,28 @@
         "        cc = inst.get(\"country_code\")\n",
         "        if cc:\n",
         "            s.add(cc)\n",
+        "    return \";\".join(sorted(s)) if s else \"\"\n",
+        "\n",
+        "def collect_corresponding_author_country_codes(authorships):\n",
+        "    \"\"\"\n",
+        "    Collect country codes for corresponding author(s):\n",
+        "    - For each authorship with is_corresponding=True:\n",
+        "      * authorships[i].countries[]\n",
+        "      * authorships[i].institutions[].country_code\n",
+        "    \"\"\"\n",
+        "    if not authorships:\n",
+        "        return \"\"\n",
+        "    s = set()\n",
+        "    for a in authorships:\n",
+        "        if not a.get(\"is_corresponding\"):\n",
+        "            continue\n",
+        "        for c in (a.get(\"countries\") or []):\n",
+        "            if c:\n",
+        "                s.add(c)\n",
+        "        for inst in (a.get(\"institutions\") or []):\n",
+        "            cc = inst.get(\"country_code\")\n",
+        "            if cc:\n",
+        "                s.add(cc)\n",
         "    return \";\".join(sorted(s)) if s else \"\"\n",
         "\n",
         "def pick_source_info(work):\n",
@@ -282,6 +422,78 @@
         "\n",
         "    return \"; \".join(items)\n",
         "\n",
+        "def parse_sdg_labels(work):\n",
+        "    \"\"\"\n",
+        "    Extract SDG information from the correct field 'sustainable_development_goals'.\n",
+        "    Returns a string like: 'SDG 3: Good health and well-being (0.95); SDG 4: Quality education (0.87)'\n",
+        "    \"\"\"\n",
+        "    # Use the correct SDG field names： 'sustainable_development_goals'\n",
+        "    sdg_field = work.get(\"sustainable_development_goals\")\n",
+        "\n",
+        "    if not sdg_field:\n",
+        "        return \"\"\n",
+        "\n",
+        "    labels = []\n",
+        "\n",
+        "    # OpenAlex returns a list, where each element contains an id, display_name, and score\n",
+        "    if isinstance(sdg_field, list):\n",
+        "        for item in sdg_field:\n",
+        "            if isinstance(item, dict):\n",
+        "                # Extract the SDG number (from the id URL, for example: \"https://metadata.un.org/sdg/3\" -> \"3\"）\n",
+        "                sdg_id = item.get(\"id\", \"\")\n",
+        "                sdg_number = \"\"\n",
+        "                if sdg_id:\n",
+        "                    # Extract the last numeric part from the URL\n",
+        "                    try:\n",
+        "                        sdg_number = sdg_id.rstrip('/').split('/')[-1]\n",
+        "                    except:\n",
+        "                        pass\n",
+        "\n",
+        "                name = item.get(\"display_name\", \"\")\n",
+        "                score = item.get(\"score\")\n",
+        "\n",
+        "                if name:\n",
+        "                    # Combine into a complete format：SDG 3: Good health and well-being (0.95)\n",
+        "                    if sdg_number:\n",
+        "                        full_label = f\"SDG {sdg_number}: {name}\"\n",
+        "                    else:\n",
+        "                        full_label = name\n",
+        "\n",
+        "                    if score is not None:\n",
+        "                        labels.append(f\"{full_label} ({score:.2f})\")\n",
+        "                    else:\n",
+        "                        labels.append(full_label)\n",
+        "        if labels:\n",
+        "            return \"; \".join(labels)\n",
+        "\n",
+        "    # If it's not in list format, try other processing methods\n",
+        "    elif isinstance(sdg_field, dict):\n",
+        "        sdg_id = sdg_field.get(\"id\", \"\")\n",
+        "        sdg_number = \"\"\n",
+        "        if sdg_id:\n",
+        "            try:\n",
+        "                sdg_number = sdg_id.rstrip('/').split('/')[-1]\n",
+        "            except:\n",
+        "                pass\n",
+        "\n",
+        "        name = sdg_field.get(\"display_name\", \"\")\n",
+        "        score = sdg_field.get(\"score\")\n",
+        "\n",
+        "        if name:\n",
+        "            if sdg_number:\n",
+        "                full_label = f\"SDG {sdg_number}: {name}\"\n",
+        "            else:\n",
+        "                full_label = name\n",
+        "\n",
+        "            if score is not None:\n",
+        "                return f\"{full_label} ({score:.2f})\"\n",
+        "            return full_label\n",
+        "\n",
+        "    elif isinstance(sdg_field, str):\n",
+        "        return sdg_field.strip()\n",
+        "\n",
+        "    return \"\"\n",
+        "\n",
         "# 3) Download all pages (basic paging)\n",
         "all_results = []\n",
         "total_downloaded = 0\n",
@@ -324,13 +536,16 @@
         "    \"primary_topic_domain\", \"primary_topic_field\", \"primary_topic_subfield\",\n",
         "    \"topics_top5\",\n",
         "    # Countries\n",
-        "    \"first_author_country_codes\", \"institution_country_codes\",\n",
+        "    \"first_author_country_codes\",\n",
         "    # Corresponding authors\n",
         "    \"corresponding_authors\",\n",
+        "    \"corresponding_author_country_codes\",\n",
         "    # APC\n",
         "    \"apc_list_values\",\n",
         "    # Citation metrics\n",
-        "    \"fwci\", \"citation_percentile\", \"citation_top_1pct\", \"citation_top_10pct\"\n",
+        "    \"fwci\", \"citation_percentile\", \"citation_top_1pct\", \"citation_top_10pct\",\n",
+        "    # SDG labels\n",
+        "    \"sdg_labels\",\n",
         "]\n",
         "\n",
         "with open(out_csv, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
@@ -375,10 +590,11 @@
         "        topics_top5 = \"; \".join([topic_label(t) for t in others_sorted])\n",
         "\n",
         "        first_author_cc = collect_first_author_country_codes(authorships)\n",
-        "        inst_cc = collect_institution_country_codes(wobj)\n",
         "        corresponding_authors = get_corresponding_authors(authorships)\n",
+        "        corr_author_cc = collect_corresponding_author_country_codes(authorships)\n",
         "        apc_list_values = parse_apc_list(wobj)\n",
         "        fwci, citation_percentile, top1, top10 = get_fwci_and_percentile(wobj)\n",
+        "        sdg_labels = parse_sdg_labels(wobj)\n",
         "\n",
         "        w.writerow([\n",
         "            wobj.get(\"id\", \"\"), doi, title, year, wtype, lang,\n",
@@ -388,10 +604,12 @@
         "            primary_topic_id, primary_topic_name,\n",
         "            primary_topic_domain, primary_topic_field, primary_topic_subfield,\n",
         "            topics_top5,\n",
-        "            first_author_cc, inst_cc,\n",
+        "            first_author_cc,\n",
         "            corresponding_authors,\n",
+        "            corr_author_cc,\n",
         "            apc_list_values,\n",
-        "            fwci, citation_percentile, top1, top10\n",
+        "            fwci, citation_percentile, top1, top10,\n",
+        "            sdg_labels,\n",
         "        ])\n",
         "\n",
         "print(f\"\\n✅ Export completed: {len(all_results)} records written.\")\n",
@@ -403,7 +621,7 @@
         "        from google.colab import files  # type: ignore\n",
         "        files.download(out_csv)\n",
         "except Exception:\n",
-        "    pass\n"
+        "    pass"
       ]
     }
   ]
