--- a/OpenAlex_Cursor_Paging_Full.ipynb
+++ b/OpenAlex_Cursor_Paging_Full.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzExzCyOI7C5vBCiHTzmEp",
+      "authorship_tag": "ABX9TyO+AZ4S9J+Cinm3A+HYKUP5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "oKM3NH2yaoE5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oKM3NH2yaoE5",
+        "outputId": "5bc7252f-fa8c-4291-b12a-b2430808c1e3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "✅ Google Drive mounted. Saving to: /content/drive/MyDrive/OpenAlex\n",
+            "📁 Output directory: /content/drive/MyDrive/OpenAlex\n",
+            "📅 Years to process: [2023, 2024]\n",
+            "📊 MAX_PAGES setting: 5\n",
+            "\n",
+            "\n",
+            "▶️ Starting year 2023, output: /content/drive/MyDrive/OpenAlex/openalex_2023.csv\n",
+            "🛰️ Request: https://api.openalex.org/works?filter=open_access.is_oa:true,authorships.countries:countries/my,type:types/article|types/review,publication_year:2023&...\n",
+            "📊 Year 2023 official meta.count = 38430\n",
+            "📦 Year 2023, page 1: 200 records, total 200\n",
+            "📦 Year 2023, page 2: 200 records, total 400\n",
+            "📦 Year 2023, page 3: 200 records, total 600\n",
+            "📦 Year 2023, page 4: 200 records, total 800\n",
+            "📦 Year 2023, page 5: 200 records, total 1000\n",
+            "⏹️ Year 2023 reached MAX_PAGES=5, stopping early (test mode).\n",
+            "\n",
+            "▶️ Starting year 2024, output: /content/drive/MyDrive/OpenAlex/openalex_2024.csv\n",
+            "🛰️ Request: https://api.openalex.org/works?filter=open_access.is_oa:true,authorships.countries:countries/my,type:types/article|types/review,publication_year:2024&...\n",
+            "📊 Year 2024 official meta.count = 28855\n",
+            "📦 Year 2024, page 1: 200 records, total 200\n",
+            "📦 Year 2024, page 2: 200 records, total 400\n",
+            "📦 Year 2024, page 3: 200 records, total 600\n",
+            "📦 Year 2024, page 4: 200 records, total 800\n",
+            "📦 Year 2024, page 5: 200 records, total 1000\n",
+            "⏹️ Year 2024 reached MAX_PAGES=5, stopping early (test mode).\n",
+            "\n",
+            "🎉 All years processed.\n",
+            "📁 Files saved to: /content/drive/MyDrive/OpenAlex\n"
+          ]
+        }
+      ],
       "source": [
         "import os, csv, time, requests\n",
         "\n",
@@ -63,7 +103,7 @@
         "# Years to harvest (This is an demo example, you may change the range based on your needs)\n",
         "YEARS = list(range(2023, 2025))   # Example: 2023–2024\n",
         "PER_PAGE = 200                    # Cursor pagination max = 200\n",
-        "MAX_PAGES = 5                 # None → full harvest; set to small int (e.g., 5) for testing\n",
+        "MAX_PAGES = 5                  # None → full harvest; set to small int (e.g., 5) for testing\n",
         "SLEEP_SEC = 1.0                   # Delay between pages; increase if rate-limited\n",
         "\n",
         "# Base filter\n",
@@ -97,6 +137,7 @@
         "    \"cited_by_count\", \"journal\", \"issn_l\",\n",
         "    \"is_oa\", \"oa_status\", \"oa_url\", \"license\", \"version\",\n",
         "    \"first_author\", \"authors\", \"authors_affiliations\",\n",
+        "    \"first_author_country_codes\",\n",
         "    \"corresponding_authors\", \"corresponding_author_country_codes\",\n",
         "    \"primary_topic_id\", \"primary_topic_name\",\n",
         "    \"primary_topic_domain\", \"primary_topic_field\", \"primary_topic_subfield\",\n",
@@ -162,6 +203,25 @@
         "            cc = inst.get(\"country_code\")\n",
         "            if cc:\n",
         "                s.add(cc)\n",
+        "    return \";\".join(sorted(s)) if s else \"\"\n",
+        "\n",
+        "def first_author_country_codes(authorships):\n",
+        "    \"\"\"\n",
+        "    Collect country codes for the first author:\n",
+        "    - authorships[0].countries[]\n",
+        "    - authorships[0].institutions[].country_code\n",
+        "    \"\"\"\n",
+        "    if not authorships:\n",
+        "        return \"\"\n",
+        "    a0 = authorships[0]\n",
+        "    s = set()\n",
+        "    for c in (a0.get(\"countries\") or []):\n",
+        "        if c:\n",
+        "            s.add(c)\n",
+        "    for inst in (a0.get(\"institutions\") or []):\n",
+        "        cc = inst.get(\"country_code\")\n",
+        "        if cc:\n",
+        "            s.add(cc)\n",
         "    return \";\".join(sorted(s)) if s else \"\"\n",
         "\n",
         "def pick_venue_from_primary_or_sources(w):\n",
@@ -387,6 +447,7 @@
         "                first_author = authorships[0].get(\"author\", {}).get(\"display_name\") if authorships else \"\"\n",
         "                authors = flatten_authors(authorships)\n",
         "                authors_affils = flatten_authors_affils(authorships)\n",
+        "                first_author_cc = first_author_country_codes(authorships)\n",
         "                corr_authors = corresponding_authors_list(authorships)\n",
         "                corr_author_cc = corresponding_author_country_codes(authorships)\n",
         "\n",
@@ -408,6 +469,7 @@
         "                    cited, journal, issn_l,\n",
         "                    is_oa, oa_status, oa_url, license_, version,\n",
         "                    first_author, authors, authors_affils,\n",
+        "                    first_author_cc,\n",
         "                    corr_authors, corr_author_cc,\n",
         "                    primary_topic_id, primary_topic_name,\n",
         "                    primary_topic_domain, primary_topic_field, primary_topic_subfield,\n",
